--- a/index.html
+++ b/index.html
@@ -121,6 +121,13 @@
                             <option value="health">Health (Medical/Wellness)</option>
                         </select>
                     </div>
+                    <div class="form-group">
+                        <label for="textPosition">Text Position</label>
+                        <select id="textPosition" required>
+                            <option value="right">Right of line (default)</option>
+                            <option value="left">Left of line</option>
+                        </select>
+                    </div>
                     <div class="form-actions">
                         <button type="submit" class="primary">Save Achievement</button>
                         <button type="button" id="cancelAchievement" class="secondary">Cancel</button>
